
    o	The compatibility define for graphics structure NewDevDesc in
	GraphicsDevice.h has been removed.


UTILITIES

    o	R CMD Rd2dvi and R CMD check are now able to cope with Cyrillic
    	characters in UTF-8 (thanks to a hint from Alexey Shipunov).

    o   New function rtags() in package 'utils' that provides etags-like
	indexing capabilities for R code files.


INSTALLATION

    o	The shell used by the 'R' script and other shell scripts run
	by 'R CMD foo' can be specified at installation time by
	setting the (precious) configure variable R_SHELL.


BUG FIXES

    o	The postscript() output for setting text is faster and smaller.

    o	Subsetting a data frame with duplicate column names without
	selecting columns (e.g. z[i,]) no longer makes the column
	names unique.

    o	data.frame() no longer ignores row names on objects if the
	first name is empty.  (PR#13230: this has been the behaviour
	for a long time, but apparently undocumented.)




	**************************************************
	*						 *
	*	       2.8 SERIES NEWS			 *
	*						 *
	**************************************************


		CHANGES IN R VERSION 2.8.0 patched


NEW FEATURES

    o	sum() now has a method for "difftime" objects (via the Summary
	group).

	max(), min() and range() applied to "difftime" object(s) now
	return a result in the common units of the objects, if there
	is one.

    o	installed.packages() is now tolerant of malformed DESCRIPTION
	files in installed packages (it ignores them, with a warning).

    o	qt() now works for 0 < df < 1.


UTILITIES

    o	R CMD build now also uses a Makevars file for cleaning up src/.

    o	R_PDFLATEXCMD is added to the environment variables set by
    	'R CMD' and is used by R CMD Rd2dvi.

	R CMD Rd2dvi now gives an explicit error message if latex (or
	pdflatex) is not available.


BUG FIXES

    o	add1.glm() no longer warns if applied to a binomial glm with a
	factor response.
