@@ -14,7 +14,8 @@ R_PRINTCMD=${R_PRINTCMD-'@R_PRINTCMD@'}
 R_LATEXCMD=${R_LATEXCMD-${LATEX-'@LATEX@'}}
 R_PDFLATEXCMD=${R_PDFLATEXCMD-${PDFLATEX-'@PDFLATEX@'}}
 R_DVIPSCMD=${R_DVIPSCMD-${DVIPS-'@DVIPS@'}}
-R_MAKEINDEXCMD=${R_MAKEINDEX-${MAKEINDEX-'@MAKEINDEX@'}}
+R_MAKEINDEXCMD=${R_MAKEINDEXCMD-${MAKEINDEX-'@MAKEINDEX@'}}
+R_TEXI2DVICMD=${R_TEXI2DVICMD-${TEXI2DVI-'@TEXI2DVI@'}}
 R_RD4DVI=${R_RD4DVI-'@R_RD4DVI@'}
 R_RD4PDF=${R_RD4PDF-'@R_RD4PDF@'}
 ## Default zip/unzip commands
