@@ -22,6 +22,7 @@ options(papersize = as.vector(papersize),
         printcmd = as.vector(Sys.getenv("R_PRINTCMD")),
         latexcmd = as.vector(Sys.getenv("R_LATEXCMD")),
         dvipscmd = as.vector(Sys.getenv("R_DVIPSCMD")),
+        texi2dvi = as.vector(Sys.getenv("R_TEXI2DVICMD")),
         browser = as.vector(Sys.getenv("R_BROWSER")),
         pager = file.path(R.home(), "bin", "pager"),
         pdfviewer = as.vector(Sys.getenv("R_PDFVIEWER")),
