@@ -25,8 +25,8 @@ texi2dvi(file, pdf = FALSE, clean = FALSE, quiet = TRUE,
     emulation (see the \code{texi2dvi} argument) is used.}
   \item{texi2dvi}{character (or \code{NULL}).  Script or program used to
     compile a TeX file to dvi or PDF, respectively.
-    The default (selected by \code{NULL}) is to look for an executable
-    on the search path and otherwise emulate the script with
+    The default (selected by \code{""} or \code{NULL}) is to look for an
+    executable on the search path and otherwise emulate the script with
     \code{system} calls.}
   \item{texinputs}{\code{NULL} or a character vector of paths to add to
     the LaTeX and bibtex input search paths.}
